
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    	xmlns:tools="http://schemas.android.com/tools"
    	tools:context=".SettingsFragment" 
        android:id="@+id/settings_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            style="@style/LoginFormContainer"
            android:layout_height="258dp"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="15dp"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <Switch
                android:id="@+id/encryptMessages"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/encryption" />

            <Switch
                android:id="@+id/signMessages"
                android:layout_width="245dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="15dp"
                android:text="@string/sign_messages" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/actualkeys"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_keys"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textSize="20sp" />

                <LinearLayout
                    android:layout_width="265dp"
                    android:layout_height="wrap_content" >

                    <TextView
                        android:id="@+id/t_privatekey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/private_key"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/privatekey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="265dp"
                    android:layout_height="wrap_content" 
                	android:layout_marginBottom="10dp">

                    <TextView
                        android:id="@+id/t_publickey"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/public_key"
                        android:textSize="16sp" />

                    <TextView
                        android:id="@+id/publickey"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp" />

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/getkey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/newkey" />

            <Button
                android:id="@+id/save_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_save" />

        </LinearLayout>
    </ScrollView>